# arc-perp-reference

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  foundry.toml
.github/workflows/: rust.yml  solidity.yml
docs/adr/: 0001-batched-end-of-block-settlement.md  0002-permissionless-account-onboarding.md  0003-usdcvault-design.md
docs/deploy/: circle-scp-runbook.md
docs/deployments/: arc-testnet.json
rust/: Cargo.toml  README.md
rust/arc-perp-sdk/: Cargo.toml
rust/arc-perp-sdk/examples/: construct_order.rs
rust/arc-perp-sdk/src/: domain.rs  lib.rs  order.rs
rust/tangent-sdk/: Cargo.toml
rust/tangent-sdk/examples/: construct_order.rs
rust/tangent-sdk/src/: domain.rs  lib.rs
script/: Deploy.s.sol
src/: AccountManager.sol  USDCVault.sol
src/interfaces/: IAccountManager.sol  IMarketRegistry.sol  IOrderBook.sol  IPriceFeed.sol  ISettlement.sol  IUSDCVault.sol
src/types/: OrderTypes.sol
test/: AccountManager.t.sol  OrderTypes.t.sol  USDCVault.t.sol
test/integration/: DepositWithdrawRoundtrip.t.sol
test/invariant/: VaultInvariants.t.sol
