[workspace]
resolver = "2"
members = [
    "arc-perp-sdk",
    # Future v0.8+ members:
    # "arc-perp-keeper",
    # "arc-perp-indexer",
    # "arc-perp-matcher",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["Jagrit Gumber <jagrit@wearemomentus.com>"]
repository = "https://github.com/JagritGumber/arc-perp-reference"
description = "Arc Testnet perpetual-futures DEX reference: off-chain Rust crates and binaries that consume the on-chain Solidity primitives in ../src."

[workspace.dependencies]
# Pinned at workspace level so all member crates resolve to the same versions.
# Concrete versions are intentionally NOT set yet for crates that have not been
# pulled in - we wire them when the consuming crate lands. This keeps Cargo.lock
# minimal until v0.8 brings in alloy / tokio / tracing etc.
serde = { version = "1", features = ["derive"] }
hex = "0.4"
thiserror = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
